# HorseShitBot

./: .gitignore  ODAN_README_1MOTOR_EXACT_POSITION_WITH_SLIDER_ROS2_LIVESTREAM.txt  README.md  README_Horseshitbot_Robot_Web_v2_4_MOTORS_DIFF_driveJoystic_2SLIDERS.md  README_NEW_PI_EN_DUAL_LIFT.md  README_V2.md  appINSTANTSTOP.py  appSilo.py  cam_lidar_green_c1_offset.py  camstreamUbuntu25  dual_lift_servo57d_modbus.py  hand_lidar_distance.py  index.html  indexSilo.html  mks_bus.py  mks_sensorless_home_diff_current_V4.py  requirements.txt  servo_node.py  setup.py
scripts/: 99-horseshitbot.rules  buildstart.sh  configure_jetson_screen_pins.sh  install.sh  install_ch340_driver.sh  install_samba.sh  install_tailscale.sh  run_dev.sh  (+4 more)
src/horseshitbot/: package.xml  setup.cfg  setup.py
src/horseshitbot/config/: camera_config.yaml  controller_config.json  params.yaml
src/horseshitbot/horseshitbot/drivers/: actuator.py  bluetooth_helper.py  ili9341_display.py  mks_bus.py  mks_wheel_backend.py  network_manager.py  odrive_serial.py  odrive_wheel_backend.py  wheel_backend.py
src/horseshitbot/horseshitbot/nodes/: actuator_node_base.py  bag_recorder_node.py  bin_door_node.py  brush_node.py  gamepad_teleop_node.py  lidar_node.py  lift_node.py  mks_bus_node.py  status_screen_node.py  web_dashboard_node.py  wheel_driver_node.py
src/horseshitbot/horseshitbot/web/static/: app.js  index.html  style.css
src/horseshitbot/launch/: mapping_bag_launch.py  robot_launch.py
src/horseshitbot/msg/: ActuatorState.msg
src/horseshitbot/srv/: ActuatorCommand.srv  SwitchBackend.srv
(+44 files in other folders)
