<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>horseshitbot</name>
  <version>0.1.0</version>
  <description>HorseShitBot ROS 2 robot controller</description>
  <maintainer email="dev@horseshitbot.local">horseshitbot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>horseshitbot_interfaces</depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
